Changed project structure, and added Spring Boot support for Wasm execution. Created a service to Generate ascii art from Go