@@ -2,6 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>4.0.6</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+
   <groupId>one.dastech</groupId>
   <artifactId>GraalWasmTest</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -17,6 +24,10 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.graalvm.sdk</groupId>
       <artifactId>graal-sdk</artifactId>
@@ -49,6 +60,13 @@
         <version>3.13.0</version>
       </plugin>
       <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
@@ -64,6 +82,7 @@
               <workingDirectory>${project.basedir}/src/main/go</workingDirectory>
               <arguments>
                 <argument>build</argument>
+                <argument>-buildmode=c-shared</argument>
                 <argument>-o</argument>
                 <argument>${project.basedir}/src/main/resources/main.wasm</argument>
                 <argument>main.go</argument>
